--- a/views/index.pug
+++ b/views/index.pug
@@ -8,4 +8,5 @@ html(lang='en')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
   body
     link(rel='icon', href='/favicon.ico')
+    script(src='/js/d3.js')
     script(src='/assets/main.js')
