--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -4,11 +4,12 @@
 
 html,
 body {
-  margin: 5px;
-  height: 100%;
+  margin: 0 auto;
 }
 
 svg {
+  width: 100%;
+  height: 100%;
   border: 1px solid lightgrey;
   text-align: center;
   position: absolute;
