--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,7 @@ html(lang='en')
     meta(name='description', content='Workflow Designer for Basic Image Processing')
     meta(name='keywords', content='Workflow,Design,Processing')
     meta(name='author', content='Nattakit Boonyang')
-    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    meta(name='viewport', content='width=device-width')
   body
     link(rel='icon', href='/favicon.ico')
     script(src='/js/d3.js')
