Remove css/app.css from webpack

--- a/views/index.pug
+++ b/views/index.pug
@@ -8,5 +8,6 @@ html(lang='en')
     meta(name='viewport', content='width=device-width')
   body
     link(rel='icon', href='/favicon.ico')
+    link(ref='stylesheet', href='/css/app.css')
     script(src='/js/d3.js')
     script(src='/assets/main.js')
