Remove {app.css, d3.js} in views/index.pug

--- a/views/index.pug
+++ b/views/index.pug
@@ -8,6 +8,4 @@ html(lang='en')
     meta(name='viewport', content='width=device-width')
   body
     link(rel='icon', href='/favicon.ico')
-    link(rel='stylesheet', href='/css/app.css')
-    script(src='/js/d3.js')
-    script(src='/assets/main.js')
+    script(src='/assets/main.bundle.js')
