Fix main.bundle.js to app.js and remove favicon in index.pug

--- a/views/index.pug
+++ b/views/index.pug
@@ -7,5 +7,4 @@ html(lang='en')
     meta(name='author', content='Nattakit Boonyang')
     meta(name='viewport', content='width=device-width')
   body
-    link(rel='icon', href='/favicon.ico')
-    script(src='/assets/main.bundle.js')
+    script(src='/assets/app.js')
