--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,36 +1,50 @@
 * {
-  font-family: sans-serif, Verdana, Arial, Helvetica;
   transform-origin: 0px 0px 0px;
 }
 
 html,
 body {
+  font-family: sans-serif, Verdana, Arial, Helvetica;
+  font-size: 1em;
   margin: 0 auto;
 }
 
 svg {
-  width: 100%;
-  height: 100%;
   border: 1px solid lightgrey;
-  text-align: center;
+  height: 100%;
   position: absolute;
+  text-align: center;
+  width: 100%;
 }
 
+$node_stroke: #999;
 .node {
-  stroke: #999;
+  cursor: move;
   stroke-width: 1;
-  cursor: pointer;
-}
-
-.node_line {
-  stroke-opacity: 0.1;
-  stroke: rgb(0, 0, 0);
-  stroke-width: 1;
+  stroke: $node_stroke;
 }
 
 .node_label {
-  stroke-width: 0;
   fill: #333;
-  user-select: none;
+  font-weight: bold;
   pointer-events: none;
+  stroke-width: 0;
+  user-select: none;
+}
+
+.node_port {
+  cursor: pointer;
+  fill: #ddd;
+  stroke-width: 1;
+  stroke: $node_stroke;
+}
+
+.node_port_hover {
+  fill: Orange;
+}
+
+.draw_line {
+  fill: none;
+  stroke: orchid;
+  stroke-width: 3;
 }
