--- a/views/index.pug
+++ b/views/index.pug
@@ -7,5 +7,4 @@ html(lang='en')
     meta(name='author', content='Nattakit Boonyang')
     meta(name='viewport', content='width=device-width')
   body
-    script(src='/assets/style.js')
-    script(src='/assets/app.js')
+    script(src='/assets/bundle.js')
