Change node color

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -1,9 +1,11 @@
 // default style
-$font-family: Arial, Helvetica, sans-serif;
+$font-family: "Lucida Console", Monaco, monospace;
 $font-size: 1em;
 
 // node
-$node-fill-color: rgb(179, 36, 36);
-$node-stroke-color: rgb(172, 172, 172);
-$node-port-fill-color: rgb(170, 170, 170);
+$node-box-fill-color: rgb(196, 196, 196);
+$node-label-fill-color: rgb(0, 0, 0);
+$node-stroke-color: rgb(0, 0, 0);
+$node-stroke-focused-color: rgb(68, 0, 255);
+$node-port-fill-color: rgb(255, 143, 51);
 $node-port-fill-hover-color: rgb(255, 166, 0);
