Add line-stroke-color to global variable

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -9,3 +9,6 @@ $node-stroke-color: #a1ff98;
 $node-stroke-focused-color: #ffbb00;
 $node-port-fill-color: rgb(255, 143, 51);
 $node-port-fill-hover-color: rgb(255, 166, 0);
+
+// line
+$line-stroke-color: #ff7f0e;
