--- a/src/scss/modules/_default.scss
+++ b/src/scss/modules/_default.scss
@@ -9,8 +9,9 @@ body {
 }
 
 svg {
+  background-color: red;
   border: 1px solid lightgrey;
-  width: 100%;
-  height: 100%;
+  width: 5000px;
+  height: 5000px;
   position: absolute;
 }
