--- a/views/index.pug
+++ b/views/index.pug
@@ -20,5 +20,5 @@ html(lang='en')
       .row
         .col-2
         .col
-          svg
+          svg.diagram-drawing
     script(src='/assets/bundle.js')
