Add flexbox to function menu

--- a/views/index.pug
+++ b/views/index.pug
@@ -19,6 +19,9 @@ html(lang='en')
     .container
       .row
         .col-2
+          .d-flex.flex-column.function-menu
+            .p-2.item(draggable='true') LOAD IMAGE
+            .p-2.item(draggable='true') ROTATE
         .col
           svg.diagram-drawing
     script(src='/assets/bundle.js')
