Add {default, node} modules scss

--- a/frontend/src/scss/app.scss
+++ b/frontend/src/scss/app.scss
@@ -1,2 +1,6 @@
 // NOTE: Import global variable
 @import './globalVariable';
+
+// NOTE: Import modules
+@import './modules/default';
+@import './modules/node';
