--- a/frontend/src/scss/app.scss
+++ b/frontend/src/scss/app.scss
@@ -4,4 +4,4 @@
 // NOTE: Import modules
 @import './modules/default';
 @import './modules/node';
-@import './modules/line'
+@import './modules/line';
