--- a/frontend/src/scss/_globalVariable.scss
+++ b/frontend/src/scss/_globalVariable.scss
@@ -1,3 +1,7 @@
 // default style
 $font-family: "Lucida Console", Monaco, monospace;
 $font-size: 1em;
+
+// DEBUG: only
+$line-fill: orange;
+$line-stroke: purple;
