--- a/frontend/src/scss/modules/_node.scss
+++ b/frontend/src/scss/modules/_node.scss
@@ -21,7 +21,7 @@
   content: attr(context-menu-node-title-content);
   background: lightgray;
   display: block;
-  font-size: 12px;
+  font-size: $contextmenu-font-size;
   font-weight: bold;
   left: 0;
   padding: 1px;
