Import contextmenu to app.scss

--- a/frontend/src/scss/app.scss
+++ b/frontend/src/scss/app.scss
@@ -3,5 +3,6 @@
 
 // NOTE: Import modules
 @import './modules/default';
+@import './modules/contextmenu';
 @import './modules/node';
 @import './modules/line';
