Import dialog scss

--- a/frontend/src/scss/app.scss
+++ b/frontend/src/scss/app.scss
@@ -3,6 +3,7 @@
 
 // NOTE: Import modules
 @import './modules/default';
+@import './modules/dialog';
 @import './modules/contextmenu';
 @import './modules/node';
 @import './modules/line';
