--- a/frontend/src/scss/modules/_dialog.scss
+++ b/frontend/src/scss/modules/_dialog.scss
@@ -29,9 +29,34 @@
 
 label.label,
 input.text,
-input.upload-file {
-  display:block;
+input.file,
+%input-style {
+  display: block;
   width: 100%;
-  padding: .4em;
-  margin-bottom:12px;
+  padding: .2em;
+  margin-bottom: 10px;
+}
+
+.file {
+  @extend %input-style;
+  cursor: pointer;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  float: left;
+  border-radius: .5em;
+
+  [type=file] {
+    cursor: inherit;
+    display: block;
+    filter: alpha(opacity=0);
+    font-size: 999px;
+    min-height: 100%;
+    min-width: 100%;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    text-align: right;
+    top: 0;
+  }
 }
