Remove {DEBUG, TODO, FIXME} comment

--- a/frontend/src/scss/_globalVariable.scss
+++ b/frontend/src/scss/_globalVariable.scss
@@ -2,7 +2,7 @@
 $font-family: "Lucida Console", Monaco, monospace;
 $font-size: 1em;
 
-// DEBUG: only
+// set line color
 $line-fill: orange;
 $line-stroke: purple;
 
