Change selector svg to #diagram-drawing

--- a/frontend/src/scss/modules/_default.scss
+++ b/frontend/src/scss/modules/_default.scss
@@ -8,7 +8,7 @@ body {
   font-size: $font-size;
 }
 
-svg {
+#diagram-drawing {
   border: 1px solid lightgrey;
   width: 5000px;
   height: 5000px;
