--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -16,7 +16,7 @@ html(lang="en")
         span.nav-link Mode
 
     .d-flex
-      #node-preview.d-flex.flex-column.bd-highlight
+      #node-preview.d-flex.flex-column
       svg#diagram-drawing.d-flex
 
     script(src="/dist/bundle.js")
