Add Roboto font

--- a/frontend/src/scss/_globalVariable.scss
+++ b/frontend/src/scss/_globalVariable.scss
@@ -1,6 +1,6 @@
 // default style
-$font-family: "Lucida Console", Monaco, monospace;
-$font-size: 1em;
+$font-family: "Roboto", sans-serif, "Lucida Console";
+$font-size: .9em;
 
 // set line color
 $line-fill: orange;
