Add new style to default style
- Add #node-preview
- Add .node-preview-item
- Add #show-mode

--- a/frontend/src/scss/modules/_default.scss
+++ b/frontend/src/scss/modules/_default.scss
@@ -6,10 +6,26 @@ html,
 body {
   font-family: $font-family;
   font-size: $font-size;
-  overflow: hidden;
+}
+
+#node-preview {
+  text-align: center;
+}
+
+.node-preview-item {
+  border-radius: 5px;
+  margin: 1em;
+  border: 2px solid black;
 }
 
 #diagram-drawing {
   width: 5000px;
   height: 5000px;
+  overflow: scroll;
+  overflow-x: scroll;
+  overflow-y: scroll;
+}
+
+#show-mode {
+  background: lightgray;
 }
