--- a/frontend/src/scss/_globalVariable.scss
+++ b/frontend/src/scss/_globalVariable.scss
@@ -1,5 +1,5 @@
 // default style
-$font-family: "Roboto", sans-serif, "Lucida Console";
+$font-family: "Roboto", "Sans-serif", "Lucida Console", "Serif";
 $font-size: .9em;
 
 // set line color
