Add transform scanle=1 to #root-area-group

--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -14,7 +14,7 @@ html(lang="en")
       #node-preview.flex-column.w-25
         #show-mode.p-2 NORMAL
       svg#diagram-drawing
-        g#root-area-group
+        g#root-area-group(transform="scale(1)")
           g#grid-area-group
           g#temp-area-group
           g#draw-area-group
