Add .justify-content-end for float right

--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -9,7 +9,7 @@ html(lang="en")
 
     script(src="/dist/bundle.js")
   body
-    ul.nav.nav-pills
+    ul.nav.nav-pills.justify-content-end
       li.nav-item
         a#start-process.nav-link(href='#') Start Process
       li.nav-item.dropdown
