Add .nav-link-custom to nav item

--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -11,11 +11,11 @@ html(lang="en")
   body
     ul.nav.nav-pills.justify-content-end
       li.nav-item
-        a#start-process.nav-link(href='#') Start Process
+        a#process.nav-link.nav-link-custom(href='#') Start Process
       li.nav-item.dropdown
-        a.nav-link(href='#') Previews
+        a.nav-link.nav-link-custom(href='#') Previews
       li.nav-item
-        a.nav-link(href='#') About
+        a.nav-link.nav-link-custom(href='#') About
 
     .d-flex
       #node-preview.flex-column
