--- a/frontend/src/scss/modules/_node.scss
+++ b/frontend/src/scss/modules/_node.scss
@@ -9,8 +9,11 @@
   }
 }
 
-.node-preview-item {
+.node-item {
+  cursor: pointer;
   border-radius: 5px;
-  margin: 1em;
-  border: 2px solid black;
+  padding: .7em;
+  margin: .5em;
+  font-weight: 600;
+  border: 1px dashed black;
 }
