--- a/frontend/src/scss/modules/_dialog.scss
+++ b/frontend/src/scss/modules/_dialog.scss
@@ -44,7 +44,11 @@ input.file,
   position: relative;
   text-align: center;
   float: left;
+  padding: .5em;
+  padding-right: 0;
+  padding-left: 0;
   border-radius: .5em;
+  background-color: lightgray;
 
   [type=file] {
     cursor: inherit;
@@ -59,4 +63,11 @@ input.file,
     text-align: right;
     top: 0;
   }
+}
+
+fieldset {
+  padding:0;
+  margin: 0;
+  border:0;
+  margin-top:25px;
 }
