--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -1,13 +1,13 @@
 html(lang="en")
   head
     meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0, shrink-to-fit=no")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     meta(name="description", content=title)
     meta(name="author" content=author)
     title #{name} - #{version}#{dev ? ' (Development Mode)' : ''}
 
-    script(src="/dist/bundle.js")
+    script(src="/editor/bundle.js")
   body
     svg#diagram-drawing
       g#root-area-group(transform="scale(1)")
