Change controller button

--- a/frontend/src/scss/modules/_default.scss
+++ b/frontend/src/scss/modules/_default.scss
@@ -43,3 +43,11 @@ body {
 .block-style {
   padding-bottom: 5px;
 }
+
+span.button {
+  cursor: pointer;
+}
+
+span.button:hover {
+  color: blue;
+}
