--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -21,9 +21,18 @@ html(lang="en")
         h3#current-mode NORMAL
       #controller-menu.block-style
         h2 Controller
-        h3 | Start | Previews |
-        h3 | Save | Load |
-        h3 | Import | Export |
+        h3
+          span#start.button Start
+          span -|-
+          span#preview.button Preview
+        h3
+          span#save.button Save
+          span -|-
+          span#load.button Load
+        h3
+          span#import.button Import
+          span -|-
+          span#export.button Export
       #node-list.block-style
         h2 Input
         #input-list
