Replace save by clear

--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -25,8 +25,8 @@ html(lang="en")
           #start.button Start
           #preview.button Preview
         h3.row
-          #save.button Save
           #load.button Load
+          #clear.button Clear
         h3.row
           #import.button Import
           #export.button Export
