Add reset editor button

--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -32,3 +32,5 @@ html(lang="en")
         #input-list
         h2 Function
         #function-list
+      .block-style
+        h6#reset RESET EDITOR
