Remove node-list

--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -27,10 +27,9 @@ html(lang="en")
         h3.row
           #import.button Import
           #export.button Export
+        h2
+          span Filter Node
+          input(id="filterNode", type="text")
       #node-list.block-style
-        h2 Input
-        #input-list
-        h2 Function
-        #function-list
       .block-style
         h6#reset RESET EDITOR
