Add clear files button

--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -32,4 +32,5 @@ html(lang="en")
           input(id="filterNode", type="text")
       #node-list.block-style
       .block-style
+        h6#clear-files CLEAR FILES
         h6#reset RESET EDITOR
