Fix preview table

--- a/frontend/views/preview.pug
+++ b/frontend/views/preview.pug
@@ -11,45 +11,4 @@ html(lang="en")
   body
     #preview-mode
       h1 Preview Mode
-      table
-        tr
-          th Image
-          th Settings
-        tr
-          td
-            | TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
-            br
-            | TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
-            br
-            | TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
-            br
-            | TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
-            br
-            | TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
-            br
-            | TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
-            br
-            | TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
-            br
-            | TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
-            br
-            | TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
-            br
-            | TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
-            br
-            | TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
-            br
-            | TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT
-          td id = 123456
-            br
-            | angle = 50
-        tr
-          td IIIIIIIIIIIIIIIIIII
-          td id = 123456
-            br
-            | angle = 5
-        tr
-          td IIIIIIIIIIIIIIIIIII
-          td id = 123456
-            br
-            | angle = 50
+      table#preview-table
