Add views title

--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -5,7 +5,7 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     meta(name="description", content=title)
     meta(name="author" content=author)
-    title #{name} - #{version}#{dev ? ' (Development Mode)' : ''}
+    title #{name} - #{version}#{dev ? ' (Development Mode)' : ''} Editor Mode
 
     script(src="/editor/bundle.js")
   body
